es_out: don't flush decoders if drained

As the doc says:

"The instance must have been drained using vlc_input_decoder_Drain() or
flushed using vlc_input_decoder_Flush() after any previous call to
vlc_input_decoder_Decode() before calling the destructor."

This will allow not flushing outputs when doing gapless transition.

Fixes #28463